--- a/style.css
+++ b/style.css
@@ -2,14 +2,66 @@
     style should only be applied if the second one is a descendent of the 
     first one 
 */
+
+body {
+    background-color: rgb(255, 252, 248);
+    font-family: 'Inter', sans-serif;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top: 47.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.span {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.nav-bar {
+    font-size: 16px;
+}
+
+.nav ul li
+
+.name {
+    font-size: 22px;
+}
+
+.icon {
+    /* float: center; */
+    display: inline-block;
+    margin: auto;
+    position: relative;
+    padding: 18px;
+    vertical-align: middle;
+}
+
+.mode-toggle-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 999;
+}
+
+.contacts {
+    /* align-items: center; */
+    /* float: left; */
+    content: "";
+    clear: both;
+    display: table;
+    text-align: center;
+    vertical-align: center;
+}
+
 .mains h4 {
     line-height: 1em;
     margin: 0px;
-}
-
-body {
-    background-color: #eaddca;
-    color: #13263a;
 }
 
 ul {
@@ -20,31 +72,17 @@ p, ul {
     margin-bottom: 0px;
 }
 
-/* #mylist {
-
-    margin: 0;
-} */
-
-.icon {
-    float: left;
-    padding: 5px;
+#inverted-image {
+    filter: invert(100%);
 }
 
-.contacts {
-    /* align-items: center; */
-    /* float: left; */
-    content: "";
-    clear: both;
-    display: table;
-}
-
-nav {
+/* side {
     float: left;
     width: 30%;
-    background-color: #bdac9c;
-}
+    background-color: rgb(255, 252, 248);
+} */
 
-article {
+main {
     float: left;
     width: 70%;
 }
@@ -53,4 +91,44 @@ section::after {
     content: "";
     display: table;
     clear: both;
+}
+
+.dark-mode {
+    background-color: rgb(68, 67, 67);
+    color: rgb(255, 255, 255);
+}
+
+.light-mode {
+    background-color: rgb(255, 252, 248);
+    color: black;
+    /* rgb(58, 57, 57); */
+}
+
+.icon-light {
+    color: black;
+    background-color: transparent;
+    border: transparent;
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    z-index: 999;
+}
+     
+.icon-light:hover {
+    color: gray;
+    background-color: transparent;
+}
+
+.icon-dark {
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    border: transparent;
+    top: 10px;
+    right: 20px;
+    z-index: 999;
+}
+     
+.icon-dark:hover {
+    color: gray;
+    background-color: transparent;
 }
